# luckapi

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PROMOTION_POSTS.md  README.md  SECURITY.md  SEO_BLOG_POST.md  SEO_KEYWORDS.md  SERVICE_SETUP  deploy.sh  docker-compose.yml  luckapi-backend.service  package-lock.json  pyproject.toml  升级.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  lint.yml  test.yml
backend/: .coverage  .env.example  .gitignore  .quality-config.yaml  Makefile  db_init.py  requirements.txt  test_concurrency_full.py  test_ws.py
backend/app/: main.py  notification.py
backend/app/api/: admin_models.py  auth.py  groups.py  models.py  notify.py  proxy.py  qa.py  users.py
backend/app/core/: config.py  encryption.py  security.py  utils.py
backend/app/db/: redis.py  session.py
backend/app/middleware/: audit.py  body_size_limit.py  rate_limit.py
backend/app/models/: models.py
backend/app/schemas/: admin_model.py  group.py  model.py  qa.py  user.py
backend/docker/: init.sql
backend/migrations/: 001_add_expires_at.py  002_reencrypt_api_keys.py  003_create_group_tables.py  004_add_allowed_ips.py  005_create_qa_records.py  006_upgrade_qa_records_to_longtext.py  007_make_global_models_api_key_nullable.py
backend/tests/: conftest.py  test_config.py  test_proxy.py  test_schemas.py  test_security.py  test_utils.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: admin_models.js  auth.js  groups.js  qa.js  request.js  user.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: Groups.vue  (+5 more)
graphify-out/: .graphify_all_files_raw.txt  .graphify_analysis.json  .graphify_ast.json  .graphify_cached.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_python  .graphify_semantic.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
nginx/: luckapi.conf
post/: juejin-zhihu-post.md  reddit-posts.md  show-hn-post.md  v2ex-post.md
uniapp/: App.vue  manifest.json  package-lock.json  package.json  pages.json
uniapp/api/: admin_models.js  auth.js  config.js  groups.js  notify.js  request.js  users.js
uniapp/store/: auth.js  notify.js
upload/: upload.sh
(+12 files in other folders)
